Installed bootstrap and styled nav area.

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Welcome to Bloccit</h1>
-<p>THis is the homepage for Bloccit. </p>
+<h1>Welcome to Bloccit everyone! </h1>
+<p>This is the homepage for Bloccit </p>
